--- a/css/atricle.css
+++ b/css/atricle.css
@@ -26,7 +26,7 @@ header>h1 {
 
 #content pre {
     padding: 10px 20px;
-    background-color: #f5f5f5;
+    background-color: #e9e9e9;
     overflow-x: auto;
 }
 
