--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ header>h1 {
 }
 
 .content .item:hover {
-    background-color: #f9f9f9;
+    background-color: #e9e9e9;
     border-radius: 10px;
 }
 
@@ -42,4 +42,27 @@ header>h1 {
     font-weight: 100;
     font-size: 15px;
     text-align: right;
+}
+
+.page {
+    margin: 0 auto;
+}
+
+.page>.pageup {
+    margin-left: 35%;
+}
+
+.page>.pageup, .page>.count, .page>.pagebottom {
+    width: 10%;
+    text-align: center;
+    /*border: 1px solid red;*/
+    cursor: pointer;
+    font-weight: 100;
+    height: 50px;
+    font-size: 25px;
+}
+
+.page>.count {
+    font-size: 20px;
+    margin-top: 6px;
 }
