--- a/css/updata.css
+++ b/css/updata.css
@@ -55,7 +55,7 @@ header>h1, textarea {
 
 .show #content pre {
     padding: 10px 20px;
-    background-color: #f5f5f5;
+    background-color: #e9e9e9;
     overflow-x: auto;
 }
 
