--- a/css/index.css
+++ b/css/index.css
@@ -3,9 +3,10 @@ header {
     margin-bottom: 50px;
 }
 
-header>h1 {
+#title {
     font-weight: 300;
     font-size: 60px;
+    margin-bottom: 50px;
 }
 
 .content {
@@ -65,4 +66,41 @@ header>h1 {
 .page>.count {
     font-size: 20px;
     margin-top: 6px;
+}
+
+
+/*按钮 position*/
+
+.layoutfixed {
+    position: fixed;
+    width: 100%;
+    bottom: 20px;
+    z-index: 1;
+}
+
+#tag {
+    position: absolute;
+    bottom: 70px;
+    font-size: 25px;
+    font-weight: 200;
+    background-color: #f9f9f9;
+    box-shadow: 0 0 50px rgba(0, 0, 0, .3);
+    padding: 20px;
+    visibility: hidden;
+}
+
+#btn {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    right: 20px;
+    bottom: 0;
+    border-radius: 30px;
+    background-color: #f9f9f9;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, .12);
+    line-height: 60px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 200px;
+    cursor: pointer;
 }
