--- a/css/atricle.css
+++ b/css/atricle.css
@@ -45,3 +45,12 @@ header {
 #content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
     font-weight: 200;
 }
+
+#content th, #content td {
+    border: 1px solid #dfe2e5;
+    padding: 6px 4px;
+}
+
+#content table {
+    border-collapse: collapse;
+}
