--- a/css/atricle.css
+++ b/css/atricle.css
@@ -33,7 +33,7 @@ header {
 
 #content pre {
     padding: 10px 20px;
-    background-color: #f9f9f9;
+    background-color: #e0e0e0;
     overflow-x: auto;
 }
 
