--- a/css/base.css
+++ b/css/base.css
@@ -11,7 +11,8 @@ body, header, h1, div, span, a {
 }
 
 body {
-    font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
+    /*font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial, sans-serif;*/
+    font-family: 'Helvetica Neue', Helvetica;
     color: #1f2f3d;
     word-break: break-all;
 }
