--- a/css/updata.css
+++ b/css/updata.css
@@ -64,12 +64,11 @@ header {
 
 .show #content pre {
     padding: 10px 20px;
-    background-color: #e9e9e9; 
+    background-color: #e9e9e9;
     overflow-x: auto;
     font-size: 15px;
     line-height: 22px;
 }
-
 
 .show #content h1, .show #content h2, .show #content h3, .show #content h4, .show #content h5, .show #content h6 {
     font-weight: 300;
@@ -89,8 +88,6 @@ header {
     line-height: 22px;
 }
 
-
-
 #content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
     font-weight: 300;
 }
@@ -102,6 +99,11 @@ header {
 
 #content table {
     border-collapse: collapse;
+}
+
+#content img {
+    min-width: 300px;
+    max-width: 800px;
 }
 
 
