--- a/css/updata.css
+++ b/css/updata.css
@@ -102,8 +102,8 @@ header {
 }
 
 #content img {
-    min-width: 300px;
-    max-width: 800px;
+    display: inline-block;
+    max-width: 100%;
 }
 
 
