--- a/css/atricle.css
+++ b/css/atricle.css
@@ -56,3 +56,11 @@ header {
     display: inline-block;
     max-width: 100%;
 }
+
+#content blockquote{
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 0 16px;
+    color: #6a737d;
+    border-left: 4px solid #dfe2e5;
+}
