--- a/css/atricle.css
+++ b/css/atricle.css
@@ -33,7 +33,7 @@ header {
 
 #content pre {
     padding: 10px 20px;
-    background-color: #e9e9e9;
+    background-color: #f8f8f8;
     overflow-x: auto;
     font-size: 15px;
     line-height: 22px;
