--- a/css/updata.css
+++ b/css/updata.css
@@ -64,7 +64,7 @@ header {
 
 .show #content pre {
     padding: 10px 20px;
-    background-color: #e9e9e9;
+    background-color: #f8f8f8;
     overflow-x: auto;
     font-size: 15px;
     line-height: 22px;
@@ -82,7 +82,7 @@ header {
 
 #content pre {
     padding: 10px 20px;
-    background-color: #e9e9e9;
+    background-color: #f8f8f8;
     overflow-x: auto;
     font-size: 15px;
     line-height: 22px;
