--- a/css/updata.css
+++ b/css/updata.css
@@ -72,6 +72,8 @@ header {
 
 .show #content h1, .show #content h2, .show #content h3, .show #content h4, .show #content h5, .show #content h6 {
     font-weight: 300;
+    margin-top: 50px;
+    margin-bottom: 0;
 }
 
 #content {
@@ -90,6 +92,8 @@ header {
 
 #content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
     font-weight: 300;
+    margin-top: 50px;
+    margin-bottom: 0;
 }
 
 #content th, #content td {
@@ -106,7 +110,7 @@ header {
     max-width: 100%;
 }
 
-#content blockquote{
+#content blockquote {
     margin-left: 10px;
     margin-right: 10px;
     padding: 0 16px;
@@ -117,6 +121,8 @@ header {
 #content code {
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+
 /*提示框*/
 
 .notification {
