代码空间不够换行问题

--- a/css/atricle.css
+++ b/css/atricle.css
@@ -69,5 +69,5 @@ header {
 
 #content code {
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-    white-space: pre;
+    word-break: normal;
 }
