--- a/css/atricle.css
+++ b/css/atricle.css
@@ -6,12 +6,12 @@ header {
 #title {
     font-size: 50px;
     font-weight: 300;
-    margin-bottom: 15px;
 }
 
 #tag {
     font-size: 25px;
     font-weight: 200;
+    margin-top: 15px;
     margin-bottom: 50px;
 }
 
