--- a/css/base.css
+++ b/css/base.css
@@ -5,16 +5,13 @@ body, h1 {
 
 body, header, h1, div, span, a {
     box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-font-smoothing: antialiased;
 }
 
 body {
-    font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
+    font-family: 'Helvetica Neue', Helvetica;
     color: #1f2f3d;
 }
+
 footer {
     font-size:15px;
     margin-top:100px;text-align:right;
