--- a/css/atricle.css
+++ b/css/atricle.css
@@ -94,4 +94,5 @@ header {
 #content code {
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     word-break: normal;
+    background-color: #f8f8f8;
 }
