--- a/css/index.css
+++ b/css/index.css
@@ -23,11 +23,11 @@ header {
     display: block;
     padding: 10px;
     text-decoration: none;
+    transition: all 0.6s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;     
 }
 
 .content .item:hover {
-    background-color: #e9e9e9;
-    border-radius: 10px;
+    box-shadow: 4px 4px 16px rgba(0, 0, 0, .20);
 }
 
 .content .item .title {
@@ -64,7 +64,8 @@ header {
     background-color: #f9f9f9;
     box-shadow: 0 0 50px rgba(0, 0, 0, .3);
     padding: 20px;
-    visibility: hidden;
+    opacity: 0;
+    transition: all 0.6s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;         
 }
 
 #btn {
