--- a/css/updata.css
+++ b/css/updata.css
@@ -42,11 +42,9 @@ header {
 /*写样式*/
 
 .write>textarea {
-    /*border-width: 0;*/
     font-weight: 200;
     font-size: 18px;
     line-height: 28px;
-    /*background-color: red;*/
 }
 
 .writr {
@@ -132,5 +130,6 @@ header {
     text-align: center;
     font-size: 30px;
     font-weight: 500px;
-    visibility: hidden;
+    opacity: 0;    
+    transition: all 0.6s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;       
 }
