--- a/css/index.css
+++ b/css/index.css
@@ -19,20 +19,19 @@ header {
 .content .item {
     margin-bottom: 50px;
     padding: 10px;
-    cursor: pointer;
-    display: block;
-    text-decoration: none;
-    
-}
-
-.content .item:hover {
-    text-decoration: underline;
+    /* display: block; */
 }
 
 .content .item .title {
     font-weight: 200;
     font-size: 25px;
+    text-decoration: none;
 }
+
+.content .item .title:hover {
+    text-decoration: underline;
+}
+
 
 .content .item .time {
     margin-top: 15px;    
