修改成点击后为粉色

--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,11 @@ header {
     text-decoration: none;
 }
 
+a:visited { 
+    color:#ffdaf3; 
+    text-decoration:none; 
+} 
+
 .content .item .title:hover {
     text-decoration: underline;
 }
