--- a/css/index.css
+++ b/css/index.css
@@ -1,67 +1,36 @@
-header {
-    margin-top: 100px;
-}
-
-#title {
-    font-weight: 300;
-    font-size: 60px;
-}
-
-.content{
-    margin-top: 40px;
-}
-
-.content .item {
-    margin-bottom: 40px;
-}
-
-.content .item .title {
-    font-weight: 200;
-    font-size: 25px;
-    text-decoration: none;
-}
-
-.content .item .title:hover {
-    text-decoration: underline;
-}
-
-.content .item .time {
-    margin-top: 5px;
-    font-weight: 100;
-    font-size: 15px;
-}
-/*按钮 position*/
-.layoutfixed {
-    position: fixed;
-    width: 100%;
-    bottom: 20px;
-    z-index: 1;    
-}
-
-#tag {
-    position: absolute;
-    bottom: 70px;
-    font-size: 25px;
-    font-weight: 200;
-    background-color: #f9f9f9;
-    box-shadow: 0 0 50px rgba(0, 0, 0, .3);
-    padding: 20px;
-    visibility: hidden;
-}
-
-#btn {
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    right: 20px;
-    bottom: 0;
-    border-radius: 30px;
-    background-color: #f9f9f9;
-    box-shadow: 2px 4px 10px rgba(0, 0, 0, .30);
-    line-height: 60px;
+body {
+    background-image: url(http://file.liangtongzhuo.com/98fa375a32a9a5c113d9.jpg);
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+    background-repeat:no-repeat;
+    height: 100vh;
     text-align: center;
-    font-size: 20px;
-    font-weight: 200px;
-    cursor: pointer;
 }
+
+#particles-js {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+
+.title {
+    display: inline-block;
+    box-sizing: border-box;
+    margin-top: 10%;
+    border: solid 1px rgba(255, 255, 255, 0.5);
+    box-shadow: inset 0 0 30px rgba(255, 255, 255, 0.5);
+    line-height: 100px;
+    border-radius: 300px;
+    width: 300px;
+    height: 300px;
+    text-align: center;
+    padding-top: 110px;
+    font-size: 35px;
+    color: #fff;
+}
+
 
