--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+html {
+    position: fixed;
+}
+
 body {
     background-image: url(http://file.liangtongzhuo.com/98fa375a32a9a5c113d9.jpg);
     background-size: cover;
@@ -5,9 +9,9 @@ body {
     margin: 0;
     background-repeat:no-repeat;
     height: 100vh;
+    width: 100vw;
     text-align: center;
     font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
-
 }
 
 #particles-js {
