--- a/css/index.css
+++ b/css/index.css
@@ -1,38 +1,39 @@
 
 
 body {
-    background-image: url(./a.jpg);
-    background-size: cover;
-    background-position: center;
-    margin: 0;
-    background-repeat:no-repeat;
-    height: 100vh;
-    width: 100vw;
     text-align: center;
     font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
 }
 
 #particles-js {
     position: fixed;
+    background-image: url(http://file.liangtongzhuo.com/98fa375a32a9a5c113d9.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat:no-repeat;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
 }
 
+.content {
+    position: fixed;
+    width: 100%;
+    text-align: center;
+}
 
 .title {
     display: inline-block;
     box-sizing: border-box;
-    margin-top: 10%;
     border: solid 1px rgba(255, 255, 255, 0.5);
     box-shadow: inset 0 0 30px rgba(255, 255, 255, 0.5);
-    line-height: 100px;
     border-radius: 300px;
     width: 300px;
     height: 300px;
     text-align: center;
-    padding-top: 100px;
+    padding-top: 130px;
     font-size: 35px;
     color: #fff;
 }
