--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@ body {
 }
 
 .description {
+    overflow:hidden;
     width: 0;
     height: 0;
 }
@@ -38,7 +39,7 @@ body {
     width: 300px;
     height: 300px;
     text-align: center;
-    padding-top: 95px;
+    padding-top: 100px;
     font-size: 35px;
     color: #fff;
 }
