--- a/css/list.css
+++ b/css/list.css
@@ -1,67 +1,76 @@
 header {
-    margin-top: 100px;
+  margin-top: 100px;
+  display: flex;
+  align-items: flex-end;
 }
 
 #title {
-    font-weight: 300;
-    font-size: 60px;
+  font-weight: 300;
+  font-size: 60px;
 }
 
-.content{
-    margin-top: 40px;
+.sub-title {
+  font-weight: 300;
+  font-size: 20px;
+  margin: 0 0 10px 10px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.content {
+  margin-top: 40px;
 }
 
 .content .item {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .content .item .title {
-    font-weight: 200;
-    font-size: 25px;
-    text-decoration: none;
+  font-weight: 200;
+  font-size: 25px;
+  text-decoration: none;
 }
 
 .content .item .title:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .content .item .time {
-    margin-top: 5px;
-    font-weight: 100;
-    font-size: 15px;
+  margin-top: 5px;
+  font-weight: 100;
+  font-size: 15px;
 }
 /*按钮 position*/
 .layoutfixed {
-    position: fixed;
-    width: 100%;
-    bottom: 20px;
-    z-index: 1;    
+  position: fixed;
+  width: 100%;
+  bottom: 20px;
+  z-index: 1;
 }
 
 #tag {
-    position: absolute;
-    bottom: 70px;
-    font-size: 25px;
-    font-weight: 200;
-    background-color: #f9f9f9;
-    box-shadow: 0 0 50px rgba(0, 0, 0, .3);
-    padding: 20px;
-    visibility: hidden;
+  position: absolute;
+  bottom: 70px;
+  font-size: 25px;
+  font-weight: 200;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  visibility: hidden;
 }
 
 #btn {
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    right: 20px;
-    bottom: 0;
-    border-radius: 30px;
-    background-color: #f9f9f9;
-    box-shadow: 2px 4px 10px rgba(0, 0, 0, .30);
-    line-height: 60px;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 200px;
-    cursor: pointer;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  right: 20px;
+  bottom: 0;
+  border-radius: 30px;
+  background-color: #f9f9f9;
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
+  line-height: 60px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 200px;
+  cursor: pointer;
 }
-
