--- a/css/list.css
+++ b/css/list.css
@@ -1,7 +1,5 @@
 header {
   margin-top: 100px;
-  display: flex;
-  align-items: flex-end;
 }
 
 #title {
@@ -12,7 +10,7 @@ header {
 .sub-title {
   font-weight: 300;
   font-size: 20px;
-  margin: 0 0 10px 10px;
+  margin-right: 15px;
   cursor: pointer;
   text-decoration: none;
 }
