--- a/css/atricle.css
+++ b/css/atricle.css
@@ -36,6 +36,10 @@ header {
     line-height: 22px;
 }
 
+#content video {
+    margin: 25px 0;
+}
+
 #content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
     font-weight: 200;
     margin-top: 50px;
